--- a/Product/Product.csproj
+++ b/Product/Product.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="IRequirement.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Prototype.cs" />
+    <Compile Include="Specification.cs" />
+    <Compile Include="UserStory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
