--- a/Product/Product.csproj
+++ b/Product/Product.csproj
@@ -44,7 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IRequirement.cs" />
-    <Compile Include="Product.cs" />
+    <Compile Include="Product.cs">
+      <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Prototype.cs" />
     <Compile Include="Specification.cs" />
