Refactored prototype class

--- a/Product/Product.csproj
+++ b/Product/Product.csproj
@@ -48,7 +48,9 @@
       <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Prototype.cs" />
+    <Compile Include="Prototype.cs">
+      <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Specification.cs" />
     <Compile Include="UserStory.cs" />
   </ItemGroup>
